[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "win32wifi"
version = "0.3.0"
description = "Python Windows Wifi - bindings for the Windows Native Wifi API"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "kedos"},
    {name = "Andres Blanco", email = "6e726d@gmail.com"}
]
keywords = ["windows", "win32", "wifi", "wlan", "wlanapi", "wlanapi.dll"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "comtypes; platform_system == 'Windows'",
    "xmltodict",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
    "pytest-cov>=4",
]

[project.urls]
Homepage = "https://github.com/kedos/win32wifi"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Hardware tests need a real Windows box with a wifi adapter; skip them by
# default. Opt in with: pytest -m "hardware" or pytest -m "not hardware or hardware".
addopts = "-m 'not hardware'"
markers = [
    "hardware: tests that require a real Windows host with a wireless adapter",
]

[tool.setuptools]
packages = ["win32wifi"]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
# Enable Pyflakes (F), Pycodestyle (E, W), Isort (I), and others
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4"]
ignore = [
    "N802", # Function name should be lowercase (Native API uses CamelCase)
    "N803", # Argument name should be lowercase
    "N806", # Variable in function should be lowercase
    "N815", # Variable in class should be lowercase
    "N816", # Variable in module should be lowercase
]

[tool.ruff.lint.isort]
known-first-party = ["win32wifi"]
