[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "win32wifi"
version = "0.3.0"
description = "Python Windows Wifi - bindings for the Windows Native Wifi API"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "kedos"},
    {name = "Andres Blanco", email = "6e726d@gmail.com"}
]
keywords = ["windows", "win32", "wifi", "wlan", "wlanapi", "wlanapi.dll"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "comtypes; platform_system == 'Windows'",
    "xmltodict",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
    "pytest-cov>=4",
]

[project.urls]
Homepage = "https://github.com/kedos/win32wifi"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Hardware tests need a real Windows box with a wifi adapter; skip them by
# default. Opt in with: pytest -m "hardware" or pytest -m "not hardware or hardware".
addopts = "-m 'not hardware'"
markers = [
    "hardware: tests that require a real Windows host with a wireless adapter",
]

[tool.setuptools]
packages = ["win32wifi"]

[tool.ruff]
# Win32 docstrings often quote MSDN signatures verbatim, and ctypes Structure
# field tuples can be long — 140 keeps those readable without an E501 ignore.
line-length = 140
target-version = "py38"

[tool.ruff.lint]
# Enable Pyflakes (F), Pycodestyle (E, W), Isort (I), and others
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4"]
ignore = [
    # PEP 8 naming rules that conflict with the Windows Native Wifi API surface
    # (we intentionally mirror Microsoft's CamelCase/ALL_CAPS conventions).
    "N801", # Class name should use CapWords (Win32 structs are ALL_CAPS)
    "N802", # Function name should be lowercase (Native API uses CamelCase)
    "N803", # Argument name should be lowercase
    "N806", # Variable in function should be lowercase
    "N815", # Variable in class should be lowercase
    "N816", # Variable in module should be lowercase
    "N999", # Invalid module name (Win32NativeWifiApi/Win32Wifi are public API)
]

[tool.ruff.lint.per-file-ignores]
# The low-level wrapper deliberately re-exports every ctypes symbol via
# ``from ctypes import *``, and the high-level module pulls in everything
# from the low-level module the same way. Ruff can't resolve names brought
# in by star imports statically, but it all works at runtime.
"win32wifi/Win32NativeWifiApi.py" = ["F403", "F405"]
"win32wifi/Win32Wifi.py"          = ["F403", "F405"]

[tool.ruff.lint.isort]
known-first-party = ["win32wifi"]
